Added pymake and setup Sphinx-autoreload

--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -3,6 +3,7 @@
 ipython # Python Shell
 pylint # Linter.
 black # Auto formatter.
+pymake # Brings basic Makefile support to any system with Python
 
 # Django
 django-extensions
