Setup PYTHONPATH and DJANGO_SETTINGS_MODULE for pytest to work in VS Code

--- a/.env_local_masma
+++ b/.env_local_masma
@@ -1,1 +1,1 @@
-PYTHONPATH=C:\repos\private\data_models_analytics_paradigm\api\src
+PYTHONPATH=C:\repos\private\data_models_analytics\backend;C:\repos\private\data_models_analytics\api\src
