Improved the home page

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -4,3 +4,7 @@ mailhog:
 	Mailhog.exe
 livedocs:
 	sphinx-autobuild apps/docs/source apps/source/docs/_build/html --port 8001 --open-browser
+builddocs:
+	sphinx-build -b html apps/docs/source apps/source/docs/_build/html
+runserver:
+	python manage.py runserver
