--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "restructuredtext.confPath": "${workspaceFolder}\\docs",
-    "python.pythonPath": ".venv\\Scripts\\python.exe",
-    "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    // "python.pythonPath": ".venv\\Scripts\\python.exe",
+    // "python.linting.pylintEnabled": true,
+    // "python.linting.enabled": true
 }
