--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "restructuredtext.confPath": "${workspaceFolder}\\docs",
-    "python.pythonPath": "c:\\Users\\masma\\source\\repos\\WPMarketAnalytics\\WPMarketAnalyticsApp\\env2\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\masma\\source\\repos\\WPMarketAnalytics\\WPMarketAnalyticsApp\\env2\\Scripts\\python.exe",
+    "restructuredtext.confPath": "${workspaceFolder}\\docs"
 }
