removed settings.json from .gitignore

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -151,7 +151,7 @@ typings/
 
 
 ### VisualStudioCode template
-.vscode/*
+!.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -286,5 +286,7 @@ backend/media/
 .pytest_cache/
 
 
-.env
-.envs/*
+.env
+
+.envs/*
+
